# proxycast

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  eslint.config.js  index.html  monitor.sh  package.json  vite.config.ts
docs/: README.md  TECH_SPEC.md  app.config.ts  i18n-translation-fixes.md  nuxt.config.ts  ops.md  package.json  plugin-ui-design.md  product-overview.md
homebrew/: README.md
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: aster_state.rs  aster_state_support.rs  credential_bridge.rs  durable_memory_fs.rs  event_converter.rs  lib.rs  mcp_bridge.rs  request_tool_policy.rs  session_store.rs  subagent_scheduler.rs  tool_io_offload.rs
src-tauri/crates/agent/src/prompt/: builder.rs  instruction_discovery.rs  templates.rs
src-tauri/crates/agent/src/tools/: mod.rs  skill_tool_gate.rs
src-tauri/crates/agent/tests/: real_codex_tool_events.rs
src-tauri/crates/browser-runtime/: Cargo.toml
src-tauri/crates/config/: Cargo.toml
src-tauri/crates/config/src/: lib.rs
src-tauri/crates/config/src/observer/: manager.rs  observers.rs  subject.rs  traits.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: app_paths.rs  env_compat.rs  lib.rs  logger.rs  tool_calling.rs  tray_format.rs  tray_menu_meta.rs  tray_state.rs
src-tauri/crates/core/src/agent/: types.rs
src-tauri/crates/core/src/backends/: mod.rs
src-tauri/crates/core/src/config/: path_utils.rs  tests.rs  types.rs  yaml.rs
src-tauri/crates/core/src/connect/: README.md  deep_link.rs  mod.rs  registry.rs  webhook.rs
src-tauri/crates/core/src/database/: migration.rs  migration_v3.rs  mod.rs  schema.rs  startup_migrations.rs  system_providers.rs
src-tauri/crates/core/src/database/dao/: agent.rs  agent_timeline.rs  api_key_provider.rs  automation_job.rs  mcp.rs  orchestrator.rs
src-tauri/crates/core/src/database/migration/: mcp_migration.rs
src-tauri/crates/core/src/errors/: README.md  gateway_error.rs  mod.rs
src-tauri/crates/core/src/models/: app_type.rs  kiro_fingerprint.rs  mcp_model.rs  mod.rs  openai.rs  skill_model.rs
src-tauri/crates/core/src/plugin/: binary_downloader.rs  loader.rs  tests.rs  types.rs
src-tauri/crates/core/src/plugin/installer/: downloader.rs  validator.rs
src-tauri/crates/core/src/router/: amp_router.rs
src-tauri/crates/core/src/session_files/: mod.rs  storage.rs
src-tauri/crates/core/src/workspace/: README.md  mod.rs
src-tauri/crates/credential/: Cargo.toml
src-tauri/crates/credential/src/: balancer.rs  quota.rs  sync.rs
src-tauri/crates/embedding/: Cargo.toml
src-tauri/crates/embedding/src/: lib.rs
src-tauri/crates/gateway/: Cargo.toml
src-tauri/crates/gateway/src/: discord.rs  feishu.rs  telegram.rs  tunnel.rs
src-tauri/crates/mcp/: Cargo.toml
src-tauri/crates/mcp/src/: client.rs  lib.rs  manager.rs  types.rs
src-tauri/crates/memory/: Cargo.toml
src-tauri/crates/memory/src/: lib.rs  migration.rs
src-tauri/crates/processor/: Cargo.toml
src-tauri/crates/processor/src/: lib.rs  processor.rs
src-tauri/crates/processor/src/steps/: auth.rs  injection.rs  plugin.rs  provider.rs  registry.rs  routing.rs  telemetry.rs  traits.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: lib.rs
src-tauri/crates/providers/src/converter/: anthropic_to_openai.rs  cw_to_openai.rs  openai_to_antigravity.rs  openai_to_cw.rs  protocol_selector.rs  reasoning_handler.rs
src-tauri/crates/providers/src/providers/: antigravity.rs  claude_custom.rs  claude_oauth.rs  codex.rs  gemini.rs  kiro.rs  openai_custom.rs  vertex.rs
src-tauri/crates/providers/src/session/: session_manager.rs
src-tauri/crates/providers/src/stream/: pipeline.rs
src-tauri/crates/providers/src/streaming/: anthropic_sse.rs  traits.rs
src-tauri/crates/providers/src/translator/: mod.rs
src-tauri/crates/providers/src/translator/kiro/anthropic/: request.rs
src-tauri/crates/providers/src/translator/kiro/openai/: request.rs
src-tauri/crates/scheduler/: Cargo.toml
src-tauri/crates/scheduler/src/: executor.rs  lib.rs  scheduler.rs
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server-utils/: Cargo.toml
src-tauri/crates/server-utils/src/: lib.rs
src-tauri/crates/server/src/: chrome_bridge.rs  client_detector.rs  lib.rs
src-tauri/crates/server/src/handlers/: api.rs  api_key_provider_utils.rs  chrome_bridge_ws.rs  credentials_api.rs  image_handler.rs  kiro_credential.rs  provider_calls.rs  websocket.rs
src-tauri/crates/services/: Cargo.toml
src-tauri/crates/services/src/: ai_summary_service.rs  api_key_provider_service.rs  aster_session_store.rs  backup_service.rs  context_memory_service.rs  kiro_event_service.rs  lib.rs  live_sync.rs  machine_id_service.rs  material_service.rs  mcp_service.rs  mcp_sync.rs  model_registry_service.rs  model_service.rs  persona_service.rs  project_context_builder.rs  prompt_service.rs  prompt_sync.rs  provider_pool_service.rs  provider_type_mapping.rs  screenshot_capture_service.rs  session_context_service.rs  skill_service.rs  switch.rs  template_service.rs  token_cache_service.rs  update_check_service.rs  video_generation_service.rs  voice_asr_service.rs  voice_config_service.rs  voice_output_service.rs  voice_processor_service.rs
src-tauri/crates/services/src/content_creator/: README.md  types.rs
src-tauri/crates/skills/: Cargo.toml
src-tauri/crates/skills/src/: lib.rs  lime_llm_provider.rs  llm_provider.rs  skill_loader.rs  skill_matcher.rs
src-tauri/crates/terminal/: Cargo.toml  README.md
src-tauri/crates/terminal/src/: emitter.rs  lib.rs  pty_session.rs  session_manager.rs
src-tauri/crates/terminal/src/connections/: connection_config.rs  connection_router.rs  ssh_connection.rs  wsl_connection.rs
src-tauri/crates/terminal/src/integration/: osc_parser.rs  shell_integration.rs  shell_scripts.rs
src-tauri/crates/terminal/src/persistence/: block_file.rs  session_store.rs
src-tauri/crates/websocket/: Cargo.toml  README.md
src-tauri/crates/websocket/src/: handler.rs  lib.rs  processor.rs
src-tauri/crates/websocket/src/handlers/: rpc_handler.rs
(+673 files in other folders)
