[package]
name = "lime-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lime-core.workspace = true
lime-mcp.workspace = true
lime-services.workspace = true
lime-providers.workspace = true
aster.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true
uuid.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
