[package]
name = "lime-browser-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
urlencoding.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tempfile.workspace = true
