[package]
name = "lime-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# Shared API models
aster-models.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true

# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# 错误处理
thiserror.workspace = true

# 日志
tracing.workspace = true

# HTTP 客户端
reqwest.workspace = true

# 时间和 UUID
chrono.workspace = true
uuid.workspace = true

# 工具库
indexmap.workspace = true
parking_lot.workspace = true
dirs.workspace = true
sha2.workspace = true
url.workspace = true
urlencoding.workspace = true
bytes.workspace = true
futures.workspace = true
dashmap.workspace = true
notify.workspace = true
rand.workspace = true

# HTTP 服务器（middleware 模块需要）
axum.workspace = true
tower.workspace = true
subtle.workspace = true

# 压缩/归档（plugin installer 需要）
flate2.workspace = true
tar.workspace = true
zip.workspace = true

# 正则表达式（logger 脱敏需要）
regex.workspace = true

# YAML 配置
serde_yaml.workspace = true

# 数据库（errors 模块需要 rusqlite::Error）
rusqlite.workspace = true

# 网络接口（network 模块需要）
if-addrs.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true