[package]
name = "lime-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lime-core.workspace = true
lime-websocket.workspace = true

serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
axum.workspace = true
urlencoding.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
