[package]
name = "lime-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lime-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
glob.workspace = true
rmcp.workspace = true
dirs.workspace = true
