[package]
name = "lime-memory"
version = "0.1.0"
edition = "2021"
authors = ["you"]

[dependencies]
# 项目内依赖
lime-embedding = { path = "../embedding" }

# 序列化
serde.workspace = true
serde_json.workspace = true

# 数据库
rusqlite.workspace = true

# HTTP 客户端
reqwest.workspace = true

# 错误处理
thiserror.workspace = true

# 时间和 UUID
chrono.workspace = true
uuid.workspace = true

# 文件系统
dirs.workspace = true

# 日志
tracing.workspace = true
