[package]
name = "lime-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# 项目内 crate
lime-core.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true

# 异步运行时
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
async-trait.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
tracing.workspace = true

# HTTP 客户端
reqwest.workspace = true

# 时间和 UUID
chrono.workspace = true
uuid.workspace = true

# 工具库
base64.workspace = true
bytes.workspace = true
dirs.workspace = true
flate2.workspace = true
sha2.workspace = true
rand.workspace = true
open.workspace = true
urlencoding.workspace = true
regex.workspace = true
once_cell.workspace = true
url.workspace = true

# HTTP 服务器（streaming 模块需要 axum 类型）
axum.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
