[package]
name = "lime-server"
version.workspace = true
edition.workspace = true

[dependencies]
lime-core.workspace = true
lime-config.workspace = true
lime-infra.workspace = true
lime-providers.workspace = true
lime-services.workspace = true
lime-credential.workspace = true
lime-websocket.workspace = true
lime-processor.workspace = true
lime-server-utils.workspace = true
lime-scheduler.workspace = true
lime-agent.workspace = true
aster.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
hex.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
chrono.workspace = true
uuid.workspace = true
base64.workspace = true
bytes.workspace = true
regex.workspace = true
subtle.workspace = true
async-stream.workspace = true
urlencoding.workspace = true
parking_lot.workspace = true
rand.workspace = true
sha2.workspace = true
tokio-util.workspace = true
dirs.workspace = true
once_cell.workspace = true
indexmap.workspace = true

[dev-dependencies]
proptest.workspace = true
