[package]
name = "lime-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lime-core.workspace = true
lime-providers.workspace = true
lime-services.workspace = true
lime-server-utils.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
