[package]
name = "lime-terminal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# 项目内 crate
lime-core = { path = "../core" }

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio.workspace = true
async-trait.workspace = true

# 错误处理
thiserror.workspace = true

# 日志
tracing.workspace = true

# 数据库
rusqlite.workspace = true

# 时间和 UUID
chrono.workspace = true
uuid.workspace = true

# 工具库
dirs.workspace = true
parking_lot.workspace = true
base64.workspace = true
sha2.workspace = true
dashmap.workspace = true
whoami.workspace = true
scopeguard.workspace = true

# 终端
portable-pty.workspace = true

# SSH
ssh2.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
