[package]
name = "lime-websocket"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# 项目内 crate
lime-core.workspace = true
lime-agent = { path = "../agent" }
lime-scheduler.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# 异步运行时
tokio.workspace = true
futures.workspace = true

# HTTP 服务器（WebSocket 支持）
axum.workspace = true

# 时间和 UUID
uuid.workspace = true
chrono.workspace = true

# 工具库
dashmap.workspace = true
parking_lot.workspace = true

[dev-dependencies]
proptest.workspace = true
rusqlite.workspace = true
